# qnx-better-screenshot

./: .gitignore  CMakeLists.txt  README.md  appmain.cpp  appmain.h  config.h  main.cpp  screenmanager.cpp  screenmanager.h  screenshot.cpp  screenshot.h  screenshot.pro
network/: tcptransceiver.cpp  tcptransceiver.h
src/: config.h  encoder.cpp  encoder.h  fpng.cpp  main.cpp  screenmanager.cpp  screenmanager.h
